--- a/mini-project-2.Rmd
+++ b/mini-project-2.Rmd
@@ -15,7 +15,7 @@ library(ggplot2)
 library(caret)
 library(stringr)
 library(tidyverse)
-library(quanteda)
+library(syuzhet)
 source("miniProjFunctions.R")
 ```
 
@@ -142,6 +142,15 @@ buzzfeed <- buzzfeed %>%
 buzzfeed <- buzzfeed %>% 
   mutate(readability_score = flesch_reading_ease(total_words, total_sentences, total_syllables))
 ```
+
+3.
+```{r}
+buzzfeed %>% 
+  mutate(primary_sentiment = max_sentiment_type(text),
+         primary_sentiment_value = max_sentiment_value(text))
+```
+
+
 
 \
 \
