--- a/mini-project-2.Rmd
+++ b/mini-project-2.Rmd
@@ -15,6 +15,7 @@ library(ggplot2)
 library(caret)
 library(stringr)
 library(tidyverse)
+library(quanteda)
 library(syuzhet)
 source("miniProjFunctions.R")
 ```
@@ -145,7 +146,7 @@ buzzfeed <- buzzfeed %>%
 
 3.
 ```{r}
-buzzfeed %>% 
+buzzfeed <- buzzfeed %>% 
   mutate(primary_sentiment = max_sentiment_type(text),
          primary_sentiment_value = max_sentiment_value(text))
 ```
