--- a/mini-project-2.Rmd
+++ b/mini-project-2.Rmd
@@ -45,63 +45,95 @@ buzzfeed <- buzzfeed %>%
 
 Our new predictors will be:
 
-[x] 1. % Unique words
-[x] 2. Flesch–Kincaid grade level
-[x] 3. Primary sentiment
-[ ] 4. Secondary sentiment
+[x] 1. Word count
+[x] 2. Word count in title
+[x] 3. Upper-case word count
+[x] 4. Upper-case word count in title
 [x] 5. ! ratio (to . ?)
-[x] 6. Author Count
-[x] 7. ! ratio (to . ?) in title
-[x] 8. Word count
-[x] 9. Sentence Count
-[x] 10. Syllables
-[x] 11. Upper-case word count in title
-[x] 12. Word count in title
+[x] 6. ! ratio (to . ?) in title
+[x] 7. Sentence Count
+[x] 8. Syllables
+[x] 9. % Unique words
+[x] 10. Flesch–Kincaid grade level
+[x] 11. Primary sentiment
+[x] 12. Secondary sentiment
 [x] 13. Strength of primary sentiment
 [x] 14. Strength of secondary sentiment
-[x] 15. Upper-case word count
+[x] 15. Author Count
 
 
-5.
-```{r}
-buzzfeed <- buzzfeed %>% 
-  mutate(exclamation_ratio = exclamation_ratio(text))
-```
-
-7.
-```{r}
-buzzfeed <- buzzfeed %>% 
-  mutate(exclamation_ratio_title = exclamation_ratio(title))
-```
-
-8.
+1. Word Count
 ```{r}
 buzzfeed <- buzzfeed %>% 
   mutate(total_words = str_count(text, " ") + 1)
 ```
 
-12.
+2. Word count in title
 ```{r}
 buzzfeed <- buzzfeed %>% 
   mutate(total_words_title = str_count(title, " ") + 1)
 ```
 
-1.
-```{r}
-buzzfeed <- buzzfeed %>% 
-  mutate(unique_word_percent = pct_unique_words(text, total_words))
-```
-
-15.
+3. Upper-case word count
 ```{r}
 buzzfeed <- buzzfeed %>% 
   mutate(total_upper_case_words = str_count(text, "\\b[A-Z]{2,}\\b"))
 ```
 
-11.
+4. Upper-case word count in title
 ```{r}
 buzzfeed <- buzzfeed %>% 
   mutate(total_upper_case_words_title = str_count(title, "\\b[A-Z]{2,}\\b"))
+```
+
+5. ! ratio (to . ?)
+```{r}
+buzzfeed <- buzzfeed %>% 
+  mutate(exclamation_ratio = exclamation_ratio(text))
+```
+
+6. ! ratio (to . ?) in title
+```{r}
+buzzfeed <- buzzfeed %>% 
+  mutate(exclamation_ratio_title = exclamation_ratio(title))
+```
+
+7. Sentence Count
+```{r}
+buzzfeed <- buzzfeed %>% 
+  mutate(total_sentences = nsentence(text))
+```
+
+8. Syllables
+```{r}
+buzzfeed <- buzzfeed %>% 
+  mutate(total_syllables = nsyllable(text))
+```
+
+9. % Unique words
+```{r}
+buzzfeed <- buzzfeed %>% 
+  mutate(unique_word_percent = pct_unique_words(text, total_words))
+```
+
+10. Flesch–Kincaid grade level
+```{r}
+buzzfeed <- buzzfeed %>% 
+  mutate(readability_score = flesch_reading_ease(total_words, total_sentences, total_syllables))
+```
+
+11. Primary sentiment
+12. Secondary sentiment
+13. Strength of primary sentiment
+14. Strength of secondary sentiment
+```{r}
+buzzfeed <- buzzfeed %>% 
+  rowwise() %>% 
+  mutate(primary_sentiment = max_sentiment_type(text, 1),
+         primary_sentiment_value = max_sentiment_value(text, 1),
+         secondary_sentiment = max_sentiment_type(text, 2),
+         secondary_sentiment_value = max_sentiment_value(text, 2)
+         )
 ```
 
 6.
@@ -126,35 +158,17 @@ buzzfeed <- buzzfeed %>%
   mutate(authors = if_else(authors == "", "None", authors))
 ```
 
-10.
+
+To demonstrate and summarize the definitions of your new predictors, discuss their measurements for one real sample article and one fake sample article of your choosing.
+
 ```{r}
-buzzfeed <- buzzfeed %>% 
-  mutate(total_syllables = nsyllable(text))
+buzzfeed[c(8,153),]
 ```
 
-9.
-```{r}
-buzzfeed <- buzzfeed %>% 
-  mutate(total_sentences = nsentence(text))
-```
+The two sources that will be presented in order to demonstrate our new predictors include "Jeb Bush to lecture at Harvard this fall", the real sample article, and "Hillary's DEAD!?!? Brand New Theory Has Serious PROOF", which is the fake article. 
+We first started by looking at predictors relating to word and punctuation counts in the text itself and the title. Our first predictors looked at the word count and upper-case word count in the text and the title. The total number of words for the title and the text were not greatly different between these two articles. The number of words in the title is exactly the same and the word count in the text is greater for the fake article, but only by 50 words. The total number of upper-case words in the text is also similar in both articles, one in the real article and two in the fake, however the difference in the number of upper-case words is more drastic in the title. There are zero upper-case words in the real title and two in the fake article, which is out of eight total words in the title. The next two predictors looked at the ratio of exclamation points to question marks and periods in the text and title. In the text, there are zero exclamation points in real article, yet about 47% in the fake article. Furthermore, in the title there are also zero exclamation points in the real article and 50% in the fake article. This shows that exclamation points are used way more freely in the fake article, rather than the real article.
 
-2.
-```{r}
-buzzfeed <- buzzfeed %>% 
-  mutate(readability_score = flesch_reading_ease(total_words, total_sentences, total_syllables))
-```
-
-3.
-```{r}
-buzzfeed <- buzzfeed %>% 
-  rowwise() %>% 
-  mutate(primary_sentiment = max_sentiment_type(text, 1),
-         primary_sentiment_value = max_sentiment_value(text, 1),
-         secondary_sentiment = max_sentiment_type(text, 2),
-         secondary_sentiment_value = max_sentiment_value(text, 2)
-         )
-```
-
+Discuss potential drawbacks of text analysis.
 
 
 \
